update image route
